--- a/.github/workflows/update-exchange-rates.yml
+++ b/.github/workflows/update-exchange-rates.yml
@@ -2,7 +2,7 @@ name: Update Exchange Rates
 
 on:
   schedule:
-    - cron: "0 3 * * *" # Todos los dias 03:00 UTC (00:00 UTC-3)
+    - cron: "0 0 * * *" # Todos los dias 00:00 GMT (03:00 UTC)
   workflow_dispatch:
 
 jobs:
