--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "recharts": "^2.15.1",
-    "use-debounce": "^10.0.4"
+    "use-debounce": "^10.0.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
