--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.10",
+    "@mantine/charts": "^7.16.3",
+    "@mantine/core": "^7.16.3",
     "@neondatabase/serverless": "^0.10.4",
+    "lucide-react": "^0.475.0",
     "negotiator": "^1.0.0",
     "next": "15.1.6",
     "next-auth": "5.0.0-beta.25",
     "next-intl": "^3.26.3",
+    "postcss-simple-vars": "^7.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
     "recharts": "^2.15.1",
     "use-debounce": "^10.0.4",
     "zustand": "^5.0.3"
