--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.6.0",
-    "@mantine/charts": "^7.16.3",
-    "@mantine/core": "^7.16.3",
+    "@mantine/charts": "^7.17.0",
+    "@mantine/core": "^7.17.0",
+    "@mantine/dates": "^7.17.0",
+    "@mantine/form": "^7.17.0",
+    "@mantine/hooks": "^7.17.0",
     "@neondatabase/serverless": "^0.10.4",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.475.0",
     "negotiator": "^1.0.0",
     "next": "15.1.7",
